<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>
    
    <string name="tip_text_view">Tip %</string>
    <string name="tip_edit_text">0.15</string>
    
    <string name="tip_amount_text_view">Tip</string>
    <string name="tip_amount_edit_text">0.0</string>
    
    <string name="final_bill_text_view">Total</string>
    <string name="final_bill_edit_text">0.0</string>

</resources>
